--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ body {
 
 /*-------------------------------------- Header styles --------------------------*/
 .header {
-  background-color: #333;
+  background-color: #979393;
   color: #fff;
-  padding: 20px;
+  /* padding: 20px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,7 +29,8 @@ body {
 }
 
 .header img {
-  max-width: 100px;
+  /* max-width: 100px; */
+  height: 80px;
 }
 
 
